# ipython-pygments-sphinx

./: LICENSE  README.md  pyproject.toml
ipython_pygments/: __init__.py  lexers.py
